--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -10,3 +10,32 @@
   </head>
   <body></body>
 </html>
+
+<!--
+
+總體流程： 分好架構Identifying the Components -> 決定網站的主題顏色(三種)與文字的Heading、Body顏色 
+
+Git
+
+  1.安裝好之後，先設定好Name跟Email
+    A.git config --global user.name "FIRST_NAME LAST_NAME"
+      此次為：Ziyun Lan
+    B.git config --global user.email "MY_NAME@example.com"
+      此次為：lanzeuen52011@gmail.com
+
+  2.指令集：
+    A.initial commit
+    
+
+
+Identifying the Components 確認需要的成分(區塊與元素)
+  A.Modular CSS
+    a.解析：將CSS放入一個模組內，然後使其能夠重複利用。
+
+Color Palette
+  A.Primary主要顏色 藍色(深藍色)
+  B.Secondary次要顏色 藍色(其他的藍色)
+  C.Accent其他顏色 橘色(除藍色以外其他顏色)
+
+
+-->
