--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -24,7 +24,8 @@ Git
       此次為：lanzeuen52011@gmail.com
 
   2.指令集：
-    A.initial commit
+    A.initial repository 初始化git的紀錄
+    B.Define the color palette 定義調色盤
     
 
 
