Build the arrow link component.

--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,24 +14,16 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Heading1</h1>
-    <h2>Heading2</h2>
-    <h3>Heading3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque enim
-      adipisci possimus doloribus nihil excepturi praesentium magni non ipsa
-      quidem!
-    </p>
-  </body>
+  <body></body>
 </html>
 
 <!--
 
 總體流程： 
 1.分好架構Identifying the Components -> 
-2.Color Palette做好調色盤，決定網站的主題顏色(三種)與文字的Heading、Body顏色 ->
-3.Typography文字排版(手機、電腦1024px)決定字型、字體大小、行高 ->
+2.Color Palette做好調色盤，決定網站的主題顏色(三種)與文字的Heading、Body顏色 -> Define the color palette. ->
+3.Typography文字排版(手機、電腦1024px)決定字型、字體大小、行高 -> Define the style for the fonts. ->
+4.Links連結排版，決定字形字體動畫等，將Link放入Link.html存放 -> Build the arrow link component.
 
 
 壹、Git
@@ -76,6 +68,14 @@
     B.決定行高的時候，有可能會因g這類超過底部的字，而導致content增大，因此將margin縮小即可。
     C.通常超過1024px的畫面，基本上就是桌電或筆電了。
       @media screen and (min-width:1024px){}
+  2.以上結束後，輸入Define the style for the fonts.到git.
+
+伍、Links連結
+  1.決定好Link的字形字體及動畫等表現方式，便將<a href="#" class="link-arrow">Learn more</a>的html程式碼，
+    放到Link.html裡面當作平台來存放。
+
+
+
 
 
 -->
