Define Badges and Lists

--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -7,14 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/NormalizeCSS.css" />
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <ul class="list list--tick">
+      <li class="list__item l">Item 1</li>
+      <li class="list__item l">Item 2</li>
+      <li class="list__item l">Item 3</li>
+    </ul>
+  </body>
 </html>
 
 <!--
@@ -24,6 +30,8 @@
 2.Color Palette做好調色盤，決定網站的主題顏色(三種)與文字的Heading、Body顏色 -> Define the color palette. ->
 3.Typography文字排版(手機、電腦1024px)決定字型、字體大小、行高 -> Define the style for the fonts. ->
 4.Links連結排版，決定字形字體動畫等，將Link放入Link.html存放 -> Build the arrow link component.
+5.Badges徽章，將徽章的顏色連結到先前設定的Primary或者Secondary的設定，在設定用class來區分大小與CSS調整內容 ->
+6.List
 
 
 壹、Git
@@ -73,6 +81,17 @@
 伍、Links連結
   1.決定好Link的字形字體及動畫等表現方式，便將<a href="#" class="link-arrow">Learn more</a>的html程式碼，
     放到Link.html裡面當作平台來存放。
+  2.以上結束後，輸入 Build the arrow link component.到git.
+
+陸、Badges徽章
+  1.指令集：
+    A.white-space: nowrap;
+      解析：可以使文字不會被換行。
+
+柒、Lists
+  1.指令集
+      A.list-style: none;
+        解析：一開始先將List的布林點消除。
 
 
 
