Define the button.

--- a/HTML&CSSPart1/1_3CSSBasics_69m/Color,Gradients,Border,Shadows.html
+++ b/HTML&CSSPart1/1_3CSSBasics_69m/Color,Gradients,Border,Shadows.html
@@ -30,6 +30,9 @@
                 B.Deciaml(十進制)：0~9
                 C.Hexadecimal(十六進制)：0~9,a~f
             例句：background-color: #e6cd10;
+        5.暗點、亮點 #暗一點、亮一點、調暗、調亮
+            lighten(顏色, n%)
+            darken 同上。
 
 參考網站：
     1.顏色選擇：Google搜尋"colorpicker"
