Difine the input groups.

--- a/HTML&CSSPart2/2_4Forms_55m/CreatingaBasicForm,StylingForms.html
+++ b/HTML&CSSPart2/2_4Forms_55m/CreatingaBasicForm,StylingForms.html
@@ -38,6 +38,8 @@ Creating a Basic Form 創造表格
            例句：<input id="name" type="text" />
            參數解析：<input id="連結" 類型="文字(或者其他類型text,email)" />
            解析：形成一個文字表格，並與label連結。
+           *outline:0; 將chrome預設的focus時的框限取消。
+           *::placeholder{color:#cdcbd7} ：將placeholder的顏色改變
        C.button按鈕
            例句：<button type="submit(reset)">Register</button>
            參數解析：<button 類型="送出(重置)">名子</button>
