--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,12 +14,7 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <button class="button button--primary button--block" type="button">
-      BUY NOW
-    </button>
-    <a href="#" class="button button--primary button--block">Buy NOW</a>
-  </body>
+  <body></body>
 </html>
 
 <!--
@@ -32,7 +27,8 @@
 5.Badges徽章，將徽章的顏色連結到先前設定的Primary或者Secondary的設定，在設定用class來區分大小與CSS調整內容 ->
 6.List -> git輸入類似前面的東西，此次輸出 Define the lists.
 7.Icon 將多個圖片變成Sprite並調整顏色與大小 ->  Define the icons.
-8.Buttons
+8.Buttons -> Define the button.
+9.Inputs -> Difine the input groups.
 
 
 壹、Git
@@ -112,6 +108,14 @@
   1.小技巧
     A.因為a(錨點)他的sizingbox不是border，所以如果兩個要一起調整大小，需要先把所有物件都設定成box-sizing: border-box;
     B.Button的屬性在於游標(cusor)滑過去(hover)時，游標不變，因此需要設定cursor: pointer;來讓游標完成變化。
+
+拾、Inputs
+  1.小技巧
+    A.outline:0; 將chrome預設的focus時的框限取消。
+    B.::placeholder{color:#cdcbd7}：將placeholder的顏色改變
+    C..input{flex-grow: 1;}讓input拿下此行除其他物件的空間的所有空間
+    
+
 
 
 
