--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,7 +14,32 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div style="width: 50%; padding: 4rem">
+      <div class="plan plan--popular">
+        <div class="card card--secondary">
+          <header class="card__header">
+            <h3 class="plan__name">Entry</h3>
+            <span class="plan__price">$14</span>
+            <span class="plan__billing-cycle">/month</span>
+            <span class="badge badge--secondary badge--small">10% OFF</span>
+            <span class="plan__description">Easy start on the could.</span>
+          </header>
+          <div class="card__body">
+            <ul class="list list--tick">
+              <li class="list__item l">Unlimited Websites</li>
+              <li class="list__item l">Unlimited Bandwidth</li>
+              <li class="list__item l">100 GB SSD Storage</li>
+              <li class="list__item l">3 GB RAM</li>
+            </ul>
+            <button class="button button--outline button--block">
+              Buy Now
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
 
 <!--
@@ -29,6 +54,7 @@
 7.Icon 將多個圖片變成Sprite並調整顏色與大小 ->  Define the icons.
 8.Buttons -> Define the button.
 9.Inputs -> Difine the input groups.
+10.Plan and Popular Badge -> Define the plan.
 
 
 壹、Git
@@ -115,8 +141,8 @@
     B.::placeholder{color:#cdcbd7}：將placeholder的顏色改變
     C..input{flex-grow: 1;}讓input拿下此行除其他物件的空間的所有空間
     
-
-
+拾壹、Cards and Popular Badge
+  1.
 
 
 -->
