--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,32 +14,7 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div style="width: 50%; padding: 4rem">
-      <div class="plan plan--popular">
-        <div class="card card--secondary">
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-cycle">/month</span>
-            <span class="badge badge--secondary badge--small">10% OFF</span>
-            <span class="plan__description">Easy start on the could.</span>
-          </header>
-          <div class="card__body">
-            <ul class="list list--tick">
-              <li class="list__item l">Unlimited Websites</li>
-              <li class="list__item l">Unlimited Bandwidth</li>
-              <li class="list__item l">100 GB SSD Storage</li>
-              <li class="list__item l">3 GB RAM</li>
-            </ul>
-            <button class="button button--outline button--block">
-              Buy Now
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
 
 <!--
@@ -55,6 +30,9 @@
 8.Buttons -> Define the button.
 9.Inputs -> Difine the input groups.
 10.Plan and Popular Badge -> Define the plan.
+11.Media Objects
+12.Quotes
+
 
 
 壹、Git
@@ -142,7 +120,37 @@
     C..input{flex-grow: 1;}讓input拿下此行除其他物件的空間的所有空間
     
 拾壹、Cards and Popular Badge
-  1.
+  1.小技巧
+    A.把熱門放在右上角
+      .plan--popular .card__header{
+        position: relative;
+      }
+      .plan--popular .card__header::before{
+        content: url(/HTML&CSSPart3/images/popular.svg);
+        width: 40px;
+        display: inline-block;
+        position: absolute;
+        top: -6;
+        right: 5%;
+      }
+
+拾貳、Media Objects
+  1.小技巧
+    A.如果icon.svg無法用fill來變換顏色，可到svg內看看是否已有內建顏色，因為這次有遇到這個問題。
+
+拾參、Quotes
+  1.指令集
+    A.q(quote)
+      inline元素。
+    B.blockquote
+      block元素。
+
+
+
+
+
+
+
 
 
 -->
