--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -32,6 +32,8 @@
 10.Plan and Popular Badge -> Define the plan.
 11.Media Objects -> Define Media
 12.Quotes -> Define Quotes
+13.Grids -> Define grid.
+14.
 
 
 
@@ -156,6 +158,9 @@
         bottom: 10px;
       }
       原本的位置在新的位置的下方10個像素。
+
+拾肆、Grids
+  1.
 
 
 
