--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body style="padding: 5rem"></body>
+  <body></body>
 </html>
 
 <!--
@@ -34,7 +34,8 @@
 12.Quotes -> Define Quotes
 13.Grids -> Define grid.
 14.Testimonials -> Define Testimonials.
-15.
+15.Callouts -> Define Callouts.
+16.
 
 
 
@@ -164,6 +165,11 @@
 拾肆、Grids
 
 拾伍、Testimonials
+
+拾六、Callouts
+  1.小技巧
+    A.justify-self: center; or align-self: center;
+      調整grid的垂直or水平置中，預設是stretch。
 
 
 
