--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="/HTML&CSSPart3/CSS/styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script src="/HTML&CSSPart3/js/main.js"></script>
+  </body>
 </html>
 
 <!--
@@ -36,6 +38,8 @@
 14.Testimonials -> Define Testimonials.
 15.Callouts -> Define Callouts.
 16.Collapsibles -> Define Collapsibles.
+17.Blocks -> Define Blocks
+18.
 
 
 
@@ -212,6 +216,17 @@
           max-height: 100vh;
           opacity: 1;
       }
+
+拾捌、Blocks
+  1.小技巧
+    A.此次可使用https://bennettfeely.com/clippy/ 來改變block的背景形狀。
+      *****padding-bottom:10rem; 因為有形狀的關係，所以paddding也會跟著減少，因此需要增設此行。
+    B.padding-bottom:calc(var(--padding-vertical)+4rem); 此處(--padding-vertical)設定為6rem。
+      意思為 下padding以(--padding-vertical)+4rem，因此等於10rem
+    C.margin: 0 auto;
+      使自然置中，網頁置中。
+
+
 
 
 
