Define Navigation Bars.

--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -38,8 +38,10 @@
 14.Testimonials -> Define Testimonials.
 15.Callouts -> Define Callouts.
 16.Collapsibles -> Define Collapsibles.
-17.Blocks -> Define Blocks
-18.
+17.Blocks -> Define Blocks.
+18.Navigation Bars -> Define Navigation Bars.
+19.Hero
+
 
 
 
@@ -226,9 +228,17 @@
     C.margin: 0 auto;
       使自然置中，網頁置中。
 
+拾玖、Navigation Bars
+  1.指令集
+    A.justify-content: space-between;
+      將左右的物件放置最左或最右。
+    B.collapsible的class加在有隱藏東西的父母項，而會被隱藏的或者收縮的則加入collapsible__content。
+      **切記max-height: 100%;opacity: 1;要記得放在list，否則一切換成看不見得狀態，重新整理網頁就真的看不見了。
+    C. .nav.collapsible__content .nav__toggler{}
+      double class selector 雙重class選擇，於class後面不加空格再加入一個class，如此範例為指定擁有nav與collapsible__content的物件。
+    D.
 
-
-
+貳拾、Hero
 
 
 
