--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -40,7 +40,7 @@
 16.Collapsibles -> Define Collapsibles.
 17.Blocks -> Define Blocks.
 18.Navigation Bars -> Define Navigation Bars.
-19.Hero
+19.Hero -> Define Hero.
 
 
 
