--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -40,8 +40,8 @@
 16.Collapsibles -> Define Collapsibles.
 17.Blocks -> Define Blocks.
 18.Navigation Bars -> Define Navigation Bars.
-19.Hero -> Define Hero.
-
+19.Hero and Optimizing Images -> Define Hero.
+20.
 
 
 
@@ -239,6 +239,10 @@
     D.
 
 貳拾、Hero
+
+貳拾壹、Optimizing Images
+  1.圖片壓縮
+    A.先用Photoshop擷取出圖片所需的size分成@1x,@2x或者依需求更多，而後到https://cloudconvert.com/jpg-to-webp 轉檔成webp。
 
 
 
