--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -41,7 +41,8 @@
 17.Blocks -> Define Blocks.
 18.Navigation Bars -> Define Navigation Bars.
 19.Hero and Optimizing Images -> Define Hero.
-20.
+20.Domain Block -> Define Domain Block.
+21.Plans Block
 
 
 
@@ -244,9 +245,14 @@
   1.圖片壓縮
     A.先用Photoshop擷取出圖片所需的size分成@1x,@2x或者依需求更多，而後到https://cloudconvert.com/jpg-to-webp 轉檔成webp。
 
+貳拾貳、Domain Block
+  1.小技巧
+    A.icon置中使用vertical-align: middle;，而非justify-item或者其他的。
+    B.grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+      當未來欄的數量會變動，可以auto-fit來自動生成，而若是每個方格要有多大的部分輸入1fr則會使此失效，因此需輸入minmax(100px,1fr)。
 
-
-
+貳拾參、 Plans Block
+  1.
 
 
 
