Define Plans Block.

--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -42,7 +42,7 @@
 18.Navigation Bars -> Define Navigation Bars.
 19.Hero and Optimizing Images -> Define Hero.
 20.Domain Block -> Define Domain Block.
-21.Plans Block
+21.Plans Block -> Define Plans Block.
 
 
 
@@ -252,7 +252,6 @@
       當未來欄的數量會變動，可以auto-fit來自動生成，而若是每個方格要有多大的部分輸入1fr則會使此失效，因此需輸入minmax(100px,1fr)。
 
 貳拾參、 Plans Block
-  1.
 
 
 
