--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -15,87 +15,6 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="block block--dark block--skewed-right block-showcase">
-      <header class="block__header">
-        <h2 class="block__heading">User-friendly Control Panel</h2>
-      </header>
-      <div class="container grid grid--1x2">
-        <picture class="block-showcase__image">
-          <source
-            type="image/webp"
-            srcset="
-              /HTML&CSSPart3/images/ipad@1x.webp 1x,
-              /HTML&CSSPart3/images/ipad@2x.webp 2x
-            "
-          />
-          <source
-            type="image/png"
-            srcset="
-              /HTML&CSSPart3/images/ipad@1x.png 1x,
-              /HTML&CSSPart3/images/ipad@2x.png 2x
-            "
-          />
-          <img src="/HTML&CSSPart3/images/ipad@1x.png" alt="" />
-        </picture>
-        <ul class="list">
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="/HTML&CSSPart3/images/sprite.svg#snap"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus facilis laborum distinctio, unde atque culpa eos
-                  natus autem architecto recusandae.
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use
-                    xlink:href="/HTML&CSSPart3/images/sprite.svg#growth"
-                  ></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Easy Start & Managed Updates</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus facilis laborum distinctio, unde atque culpa eos
-                  natus autem architecto recusandae.
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use
-                    xlink:href="/HTML&CSSPart3/images/sprite.svg#wordpress"
-                  ></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title">Dynamic Caching & More</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Accusamus facilis laborum distinctio, unde atque culpa eos
-                  natus autem architecto recusandae.
-                </p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
     <script src="/HTML&CSSPart3/js/main.js"></script>
   </body>
 </html>
@@ -126,6 +45,7 @@
 21.Plans Block -> Define Plans Block.
 22.Features Block -> Define Features Block.
 23.Showcase Block -> Define Showcase Block.
+24.Testimonials Block -> Define Testimonials Block.
 
 
 
@@ -351,7 +271,8 @@
     B.圖片回應
       width: 100%;
 
-
+貳拾陸、Testimonials Block
+  1.
 
 
 
