--- a/HTML&CSSPart3/index.html
+++ b/HTML&CSSPart3/index.html
@@ -46,6 +46,7 @@
 22.Features Block -> Define Features Block.
 23.Showcase Block -> Define Showcase Block.
 24.Testimonials Block -> Define Testimonials Block.
+25.Footer -> Define Footer.
 
 
 
@@ -272,7 +273,14 @@
       width: 100%;
 
 貳拾陸、Testimonials Block
-  1.
+
+貳拾柒、Footer
+  1.小技巧
+    A.將class物件移動至最前面
+    .footer__brand{
+      order: -1;
+    }
+
 
 
 
