--- a/HTML&CSSPart2/2_1Layout_94m/2_1Exercise/2exercise.html
+++ b/HTML&CSSPart2/2_1Layout_94m/2_1Exercise/2exercise.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/NormalizeCSS.css" />
     <link
       rel="stylesheet"
-      href="/HTML&CSSPart2/2_1Layout(94m)/2_1Exercise/2exercise.css"
+      href="/HTML&CSSPart2/2_1Layout_94m/2_1Exercise/2exercise.css"
     />
   </head>
   <body>
