--- a/HTMLCSSPart3/index.html
+++ b/HTMLCSSPart3/index.html
@@ -517,7 +517,7 @@
         </section>
         <div class="footer__brand">
           <img src="/HTMLCSSPart3/images/logo.svg" alt="" />
-          <p class="footer__copyright">Copyright 2020 Mosh Hanedani</p>
+          <p class="footer__copyright">Copyright 2023 LanZiYun</p>
         </div>
       </div>
     </footer>
